namespaces/live.cloud-platform.service.justice.gov.uk/laa-info-and-advice-datastore-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-info-and-advice-datastore-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "info-advice-datastore-devs"
    cloud-platform.justice.gov.uk/application: "Info and Advice Datastore"
    cloud-platform.justice.gov.uk/owner: "Means and Match: info-advice-datastore@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-info-and-advice-datastore"
    cloud-platform.justice.gov.uk/team-name: "info-advice-datastore"
    cloud-platform.justice.gov.uk/review-after: ""
