namespaces/live.cloud-platform.service.justice.gov.uk/laa-info-and-advice-datastore-uat/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: laa-info-and-advice-datastore-uat
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
